--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "handlebars": "^4.0.5",
     "hbs": "~3.1.0",
     "jquery": "^3.1.0",
+    "material-design-icons": "^3.0.1",
     "mongoose": "^4.6.0",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.6.1",
